smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/metadata/invalid-object-shape-id-key.smithy
// Syntax error at line 3, column 6: Expected COLON(':') but found DOT('.') | Model
metadata foo = {
  foo.bar#baz: "hello"
}
